# clipper

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  LICENSE  README.md  pyproject.toml
src/: chunker.py  google_auth.py  main.py  uploader.py  utils.py  utils_test.py
tests/: utils_test.py
