[project]
name = "clipper"
version = "0.0.1"
requires-python = "~=3.12"
dependencies = [
    "moviepy>=2.1.1,<3",
    "typer>=0.15.1,<0.16",
    "google-api-python-client>=2.154.0,<3",
    "google-auth-oauthlib>=1.2.1,<2",
    "google-auth-httplib2>=0.2.0,<0.3",
    "pydantic>=2.10.3,<3",
    "openai>=1.57.2,<2",
    "ruff>=0.13.0",
    "google-genai>=1.50.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
]

[tool.uv]
package = false

[tool.isort]
py_version=312
profile = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

